@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pdfblur.1,v 1.3 2005/01/18 01:37:43 greg Exp $"
+.\" RCSid "$Id: pdfblur.1,v 1.4 2005/01/18 03:59:40 greg Exp $"
 .TH PDFBLUR 1 1/24/96 RADIANCE
 .SH NAME
 pdfblur - generate views for depth-of-field blurring
@@ -127,4 +127,4 @@ Greg Ward
 .SH BUGS
 This program really only works with perspective views.
 .SH "SEE ALSO"
-pcomb(1), pinterp(1), pmblur(1), rcalc(1), rpict(1), vwright(1)
+pcomb(1), pinterp(1), pmblur(1), pmdblur(1), rcalc(1), rpict(1), vwright(1)
