@@ -1,23 +1,27 @@
-.\" RCSid "$Id: pmblur.1,v 1.3 2005/01/18 03:59:40 greg Exp $"
-.TH PMBLUR 1 3/3/98 RADIANCE
-.SH NAME
-pmblur - generate views for camera motion blurring
+.\" RCSid "$Id: pmdblur.1,v 1.1 2005/01/18 03:59:40 greg Exp $"
+.TH PMDBLUR 1 1/17/05 NAME
+pmdblur - generate views for combined camera motion and depth blurring
 .SH SYNOPSIS
-.B pmblur
+.B pmdblur
 .B speed
+.B aperture
 .B nsamp
 .B v0file
 .B v1file
 .SH DESCRIPTION
-.I Pmblur
+.I Pmdblur
 takes two viewfiles and generates
 .I nsamp
 views starting from
 .I v0file
 and moving towards
-.I v1file.
+.I v1file,
+simulating an aperture of diameter
+.I aperture
+in world coordinate units.
 When rendered and averaged together, these views will result in
-a picture with motion blur due to a camera changing from v0 to v1
+a picture with motion and depth-of-field
+blur due to a camera changing from v0 to v1
 in a relative time unit of 1, whose shutter is open starting at v0 for
 .I speed
 of these time units.
@@ -29,13 +33,13 @@ may be called to do the actual work.
 (The given
 .I v0file
 must also be passed on the command line to the chosen renderer, since
-.I pmblur
+.I pmdblur
 provides supplemental view specifications only.)\0
 .PP
 For
 .I pinterp,
 feed the output of
-.I pmblur
+.I pmdblur
 to the standard input of
 .I pinterp
 and apply the
@@ -51,7 +55,7 @@ option of
 .I pinterp.
 .PP
 To use
-.I pmblur
+.I pmdblur
 with
 .I rpict,
 apply the
@@ -76,45 +80,46 @@ For both
 and
 .I rpict,
 the computation time will be proportional to the number of views from
-.I pmblur.
+.I pmdblur.
 We have found a
 .I nsamp
-setting somewhere between 5 and 10 to be adequate for most images.
+setting somewhere between 7 and 15 to be adequate for most images.
 Relatively larger values are appropriate for faster camera motion.
 .PP
 The
 .I \-pm
-option of
+and/or
+.I \-pd
+options of
 .I rpict
 may be used instead or in combination to blur animated frames, with
 the added advantage of blurring reflections and refractions according
 to their proper motion.
 However, this option will result in more noise and expense than using
-.I pmblur
+.I pmdblur
 with
 .I pinterp
 as a post-process.
 If both blurring methods are used, a smaller value should be given to the
 .I rpict
 .I \-pm
-option equal to the shutter speed divided by the number of pmblur views.
+option equal to the shutter speed divided by the number of samples, and the
+.I \-pd
+option equal to the aperture divided by the number of samples.
 This will be just enough to blur the boundaries of the ghosts
 which may appear using
-.I pmblur
+.I pmdblur
 with a small number of time samples.
 .SH EXAMPLES
 To use
 .I pinterp
 to simulate motion blur between two frames of a walk-through
 animation, where the camera shutter is open for 1/4 of the
-interframe distance:
+interframe distance with an aperture of 0.1 world units:
 .IP "" .2i
-pmblur .25 8 fr1023.pic fr1024.pic | pinterp -B -vf fr1023.pic -x 640 -y 480
+pmdblur .25 .1 8 fr1023.pic fr1024.pic | pinterp -B -vf fr1023.pic -x 640 -y 480
 fr1023.pic fr1023.zbf fr1024.pic fr1024.zbf > fr1023b.pic
 .SH AUTHOR
 Greg Ward
-.SH BUGS
-Changes in the view shift and lift vectors or the fore and aft
-clipping planes are not blurred.
 .SH "SEE ALSO"
-pcomb(1), pdfblur(1), pinterp(1), pmdblur(1), rcalc(1), rpict(1), vwright(1)
+pcomb(1), pdfblur(1), pinterp(1), pmblur(1), rcalc(1), rpict(1), vwright(1)
