@@ -1,4 +1,4 @@
-.\" RCSid "$Id: ranimate.1,v 1.2 2003/12/09 15:59:06 greg Exp $"
+.\" RCSid "$Id: ranimate.1,v 1.3 2005/01/18 03:59:40 greg Exp $"
 .TH RANIMATE 1 6/24/98 RADIANCE
 .SH NAME
 ranimate - compute a RADIANCE animation
@@ -352,14 +352,29 @@ If this number is less than 2, then bluring is performed by
 only, resulting in greater noise than the combination of
 .I rpict
 and
-.I pinterp used otherwise.
-(The default value for number of samples is 5.)\0
-The
-.I pmblur(1)
-command is used to generate the given number of additional views for
 .I pinterp
-to average together.
-The default value is 0, meaning no motion blurring.
+used otherwise.
+(The default value for number of samples is 5.)\0
+The default fraction is 0, meaning no motion blurring.
+This option does not currently work with the
+.I ANIMATE
+variable, since pinterp only works for static environments.
+.TP
+.BR DBLUR
+This variable specifies the aperture diameter for depth-of-field blurring,
+in world units.
+A number of samples may be given as a second argument, which controls the
+number of additional frames computed and averaged together by
+.I pinterp.
+If this number is less than 2, then blurring is performed by
+.I rpict
+only, resulting in greater noise than the combination of
+.I rpict
+and
+.I pinterp
+used otherwise.
+(The default value for number of samples is 5.)\0
+The default aperture is 0, meaning no depth-of-field blurring.
 This option does not currently work with the
 .I ANIMATE
 variable, since pinterp only works for static environments.
