@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.56 2004/11/25 14:47:03 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.57 2005/01/18 03:59:41 greg Exp $
 #
 # Compiles for image processing and display programs
 #
@@ -30,19 +30,20 @@ ogl:
 sun:
 
 install:	$(PROGS) $(SPECIAL) normpat.csh falsecolor.csh \
-pdfblur.csh pmblur.csh xyzimage.csh pgblur.csh
+pdfblur.csh pmblur.csh pmdblur.csh xyzimage.csh pgblur.csh
 	cp $(PROGS) $(INSTDIR)
 	cp normpat.csh $(INSTDIR)/normpat
 	cp falsecolor.csh $(INSTDIR)/falsecolor
 	cp pdfblur.csh $(INSTDIR)/pdfblur
 	cp pmblur.csh $(INSTDIR)/pmblur
+	cp pmdblur.csh $(INSTDIR)/pmdblur
 	cp xyzimage.csh $(INSTDIR)/xyzimage
 	cp phisto.csh $(INSTDIR)/phisto
 	cp pdelta.csh $(INSTDIR)/pdelta
 	cp pgblur.csh $(INSTDIR)/pgblur
 	cp ra_pfm.csh $(INSTDIR)/ra_pfm
 	cd $(INSTDIR) ; chmod 755 normpat falsecolor pdfblur \
-		pmblur xyzimage phisto pdelta pgblur ra_pfm
+		pmblur pmdblur xyzimage phisto pdelta pgblur ra_pfm
 
 clean:
 	rm -f $(PROGS) $(SPECIAL) *.o core
